--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "base58>=2.1.1",
     "deprecated>=1.2.18",
+    "eth-keys>=0.7.0",
+    "eth-utils>=5.3.0",
+    "pycryptodome>=3.22.0",
     "pytest-aio>=1.9.0",
 ]
