--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "base58>=2.1.1",
+    "bech32>=1.2.0",
     "deprecated>=1.2.18",
+    "ecdsa>=0.19.1",
     "eth-keys>=0.7.0",
     "eth-utils>=5.3.0",
     "pycryptodome>=3.22.0",
